--- a/src/Astor.RabbitMq/Astor.RabbitMq.csproj
+++ b/src/Astor.RabbitMq/Astor.RabbitMq.csproj
@@ -5,9 +5,9 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Astor.Background.Abstractions\Astor.Background.Abstractions.csproj" />
-      <ProjectReference Include="..\Astor.GreenPipes\Astor.GreenPipes.csproj" />
-      <ProjectReference Include="..\Astor.Reflection\Astor.Reflection.csproj" />
+      <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
+      <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+      <PackageReference Include="RabbitMQ.Client" Version="6.2.1" />
     </ItemGroup>
 
     <ItemGroup>
@@ -23,12 +23,6 @@
       <Reference Include="Microsoft.Extensions.Options.ConfigurationExtensions, Version=5.0.0.0, Culture=neutral, PublicKeyToken=adb9793829ddae60">
         <HintPath>..\..\..\..\..\..\usr\local\share\dotnet\packs\Microsoft.AspNetCore.App.Ref\5.0.0\ref\net5.0\Microsoft.Extensions.Options.ConfigurationExtensions.dll</HintPath>
       </Reference>
-    </ItemGroup>
-
-    <ItemGroup>
-      <PackageReference Include="GreenPipes" Version="4.0.0" />
-      <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
-      <PackageReference Include="RabbitMQ.Client" Version="6.2.1" />
     </ItemGroup>
 
 </Project>
