--- a/src/Example.Service/appsettings.json
+++ b/src/Example.Service/appsettings.json
@@ -6,6 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "Rabbit": {
+    "Host" : "localhost",
+    "Port": 5672
+  },
   "Phrases" : {
     "Beginning": "Bonjour"
   },
