--- a/src/Astor.Background/Astor.Background.csproj
+++ b/src/Astor.Background/Astor.Background.csproj
@@ -31,6 +31,8 @@
     <ItemGroup>
       <PackageReference Include="GreenPipes" Version="4.0.0" />
       <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+      <PackageReference Include="RabbitMQ.Client" Version="6.2.1" />
+      <PackageReference Include="Telegram.Bot" Version="15.7.1" />
     </ItemGroup>
 
 </Project>
