--- a/src/Example.Service/Example.Service.csproj
+++ b/src/Example.Service/Example.Service.csproj
@@ -1,13 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>net5.0</TargetFramework>
-    </PropertyGroup>
+      <UserSecretsId>2df69358-3692-4cde-bee5-ac6ff3d7178d</UserSecretsId>
+  </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Astor.Background.Abstractions\Astor.Background.Abstractions.csproj" />
-      <ProjectReference Include="..\Astor.Background.RabbitMq\Astor.Background.RabbitMq.csproj" />
       <ProjectReference Include="..\Astor.Background\Astor.Background.csproj" />
       <ProjectReference Include="..\Astor.RabbitMq\Astor.RabbitMq.csproj" />
     </ItemGroup>
