--- a/src/Astor.Background/Astor.Background.csproj
+++ b/src/Astor.Background/Astor.Background.csproj
@@ -5,14 +5,6 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Astor.Background.Abstractions\Astor.Background.Abstractions.csproj" />
-      <ProjectReference Include="..\Astor.Background.Management.Protocol\Astor.Background.Management.Protocol.csproj" />
-      <ProjectReference Include="..\Astor.GreenPipes\Astor.GreenPipes.csproj" />
-      <ProjectReference Include="..\Astor.RabbitMq\Astor.RabbitMq.csproj" />
-      <ProjectReference Include="..\Astor.Reflection\Astor.Reflection.csproj" />
-    </ItemGroup>
-
-    <ItemGroup>
       <Reference Include="Microsoft.Extensions.Configuration.Abstractions, Version=5.0.0.0, Culture=neutral, PublicKeyToken=adb9793829ddae60">
         <HintPath>..\..\..\..\..\..\usr\local\share\dotnet\packs\Microsoft.AspNetCore.App.Ref\5.0.0\ref\net5.0\Microsoft.Extensions.Configuration.Abstractions.dll</HintPath>
       </Reference>
@@ -31,6 +23,10 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Astor.Background.Management.Protocol" Version="1.0.0" />
+      <PackageReference Include="Astor.GreenPipes" Version="1.0.0" />
+      <PackageReference Include="Astor.RabbitMq" Version="1.0.0" />
+      <PackageReference Include="Astor.Reflection" Version="1.0.0" />
       <PackageReference Include="GreenPipes" Version="4.0.0" />
       <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
       <PackageReference Include="RabbitMQ.Client" Version="6.2.1" />
