--- a/templates/Astor.Background.Management.Service/Astor.Background.Management.Service.csproj
+++ b/templates/Astor.Background.Management.Service/Astor.Background.Management.Service.csproj
@@ -3,10 +3,12 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>net5.0</TargetFramework>
-      <UserSecretsId>3d5975c0-ddb7-42c9-8eb8-c3cafb400d26</UserSecretsId>
-  </PropertyGroup>
+        <LangVersion>latest</LangVersion>
+        <UserSecretsId>3d5975c0-ddb7-42c9-8eb8-c3cafb400d26</UserSecretsId>
+    </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Astor.Background" Version="1.0.0" />
       <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
       <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
       <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="5.0.0" />
@@ -14,20 +16,8 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\src\Astor.Background.Management.Protocol\Astor.Background.Management.Protocol.csproj" />
-      <ProjectReference Include="..\..\src\Astor.Background\Astor.Background.csproj" />
-      <ProjectReference Include="..\..\src\Astor.RabbitMq\Astor.RabbitMq.csproj" />
-    </ItemGroup>
-
-    <ItemGroup>
       <None Remove="appsettings.json" />
-      <Content Include="appsettings.json">
-        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-      </Content>
       <None Remove="appsettings.Development.json" />
-      <Content Include="appsettings.Development.json">
-        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-      </Content>
     </ItemGroup>
 
 </Project>
