--- a/src/Example.DebugWebApi/Example.DebugWebApi.csproj
+++ b/src/Example.DebugWebApi/Example.DebugWebApi.csproj
@@ -5,6 +5,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Astor.Background" Version="1.0.0" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.0" NoWarn="NU1605" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="5.0.0" NoWarn="NU1605" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
@@ -12,7 +13,6 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Astor.Background.Management\Astor.Background.Management.csproj" />
-      <ProjectReference Include="..\Astor.Background\Astor.Background.csproj" />
       <ProjectReference Include="..\Example.Service\Example.Service.csproj" />
     </ItemGroup>
 
