background joined with all and swagger fixed

--- a/src/Example.DebugWebApi/Example.DebugWebApi.csproj
+++ b/src/Example.DebugWebApi/Example.DebugWebApi.csproj
@@ -12,7 +12,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Astor.Background.Management\Astor.Background.Management.csproj" />
+      <ProjectReference Include="..\Astor.Background\Astor.Background.csproj" />
       <ProjectReference Include="..\Example.Service\Example.Service.csproj" />
     </ItemGroup>
 
