--- a/templates/Astor.Background.Management.Service/Astor.Background.Management.Service.csproj
+++ b/templates/Astor.Background.Management.Service/Astor.Background.Management.Service.csproj
@@ -8,7 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Astor.Background" Version="1.0.0.1" />
+      <PackageReference Include="FluentScheduler" Version="5.5.1" />
       <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
       <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
       <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="5.0.0" />
@@ -18,6 +18,10 @@
     <ItemGroup>
       <None Remove="appsettings.json" />
       <None Remove="appsettings.Development.json" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\..\src\Astor.Background\Astor.Background.csproj" />
     </ItemGroup>
 
 </Project>
