AspNetCore Utils moved to separate project

--- a/src/Astor.Background.Management.Tests/Astor.Background.Management.Tests.csproj
+++ b/src/Astor.Background.Management.Tests/Astor.Background.Management.Tests.csproj
@@ -16,6 +16,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Astor.Background.Management.AspNetCoreUtils\Astor.Background.Management.AspNetCoreUtils.csproj" />
       <ProjectReference Include="..\Astor.Background\Astor.Background.csproj" />
       <ProjectReference Include="..\Example.Service\Example.Service.csproj" />
     </ItemGroup>
