--- a/src/Astor.Background/Astor.Background.csproj
+++ b/src/Astor.Background/Astor.Background.csproj
@@ -2,7 +2,7 @@
 
     <PropertyGroup>
         <TargetFramework>net5.0</TargetFramework>
-        <PackageVersion>1.1.0.3</PackageVersion>
+        <PackageVersion>1.2.0.0</PackageVersion>
     </PropertyGroup>
 
     <ItemGroup>
@@ -31,8 +31,11 @@
       <PackageReference Include="Microsoft.OpenApi.Readers" Version="1.2.3" />
       <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
       <PackageReference Include="RabbitMQ.Client" Version="6.2.1" />
-      <PackageReference Include="Swashbuckle.AspNetCore.Newtonsoft" Version="6.0.7" />
       <PackageReference Include="Telegram.Bot" Version="15.7.1" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Management\Utils" />
     </ItemGroup>
 
 </Project>
