--- a/templates/Astor.Background.Management.Service/Astor.Background.Management.Service.csproj
+++ b/templates/Astor.Background.Management.Service/Astor.Background.Management.Service.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Astor.Logging" Version="1.0.0" />
       <PackageReference Include="FluentScheduler" Version="5.5.1" />
       <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
       <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
