--- a/templates/docker-compose.yml
+++ b/templates/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.9'
 
 services: 
   service:
-    image: vosarat/background-management-service:1.0.0.2
+    image: vosarat/background-management-service:1.2.0
     restart: always
     build:
       context: Astor.Background.Management.Service
@@ -11,6 +11,7 @@ services:
       - MONGO_CONNECTIONSTRING=mongodb://mongo:27017
       - TELEGRAM_TOKEN=${TELEGRAM_TOKEN}
       - TELEGRAM_CHATID=${TELEGRAM_CHATID}
+      - INTERNALEXCHANGEPREFIX=my-docker
     depends_on: 
       - rabbit
       - mongo
