--- a/src/Astor.RabbitMq.Tests/Astor.RabbitMq.Tests.csproj
+++ b/src/Astor.RabbitMq.Tests/Astor.RabbitMq.Tests.csproj
@@ -11,6 +11,12 @@
         <PackageReference Include="MSTest.TestAdapter" Version="2.1.1" />
         <PackageReference Include="MSTest.TestFramework" Version="2.1.1" />
         <PackageReference Include="coverlet.collector" Version="1.3.0" />
+        <PackageReference Include="RabbitMQ.Client" Version="6.2.1" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Astor.RabbitMq\Astor.RabbitMq.csproj" />
+      <ProjectReference Include="..\Astor.Tests\Astor.Tests.csproj" />
     </ItemGroup>
 
 </Project>
