--- a/src/Astor.RabbitMq.Tests/Astor.RabbitMq.Tests.csproj
+++ b/src/Astor.RabbitMq.Tests/Astor.RabbitMq.Tests.csproj
@@ -7,16 +7,16 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="FakeItEasy" Version="7.0.1" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.1" />
         <PackageReference Include="MSTest.TestAdapter" Version="2.1.1" />
         <PackageReference Include="MSTest.TestFramework" Version="2.1.1" />
         <PackageReference Include="coverlet.collector" Version="1.3.0" />
+        <PackageReference Include="RabbitMQ.Client" Version="6.2.1" />
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Astor.Background.Management.Service\Astor.Background.Management.Service.csproj" />
       <ProjectReference Include="..\Astor.RabbitMq\Astor.RabbitMq.csproj" />
+      <ProjectReference Include="..\Astor.Tests\Astor.Tests.csproj" />
     </ItemGroup>
 
 </Project>
