Timers support in RabbitMq Background Service

--- a/src/Example.Service/Example.Service.csproj
+++ b/src/Example.Service/Example.Service.csproj
@@ -47,6 +47,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Astor.Background\Astor.Background.csproj" />
+      <ProjectReference Include="..\Astor.Tests\Astor.Tests.csproj" />
     </ItemGroup>
 
 </Project>
