temp - few fixes

--- a/src/Example.Service/appsettings.json
+++ b/src/Example.Service/appsettings.json
@@ -6,9 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "Rabbit": {
-    "Host" : "localhost",
-    "Port": 5672
+  "ConnectionStrings": {
+    "RabbitMq" : "amqp://localhost:5672"    
   },
   "Phrases" : {
     "Beginning": "Bonjour"
