--- a/src/Astor.Background.Management.AspNetCoreUtils.Tests/Astor.Background.Management.AspNetCoreUtils.Tests.csproj
+++ b/src/Astor.Background.Management.AspNetCoreUtils.Tests/Astor.Background.Management.AspNetCoreUtils.Tests.csproj
@@ -2,6 +2,7 @@
 
     <PropertyGroup>
         <TargetFramework>net5.0</TargetFramework>
+
         <IsPackable>false</IsPackable>
     </PropertyGroup>
 
@@ -13,8 +14,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Astor.Background\Astor.Background.csproj" />
-      <ProjectReference Include="..\Example.Service\Example.Service.csproj" />
+      <ProjectReference Include="..\Astor.Background.Management.AspNetCoreUtils\Astor.Background.Management.AspNetCoreUtils.csproj" />
     </ItemGroup>
 
 </Project>
