--- a/src/Astor.Background.Management.Tests/Astor.Background.Management.Tests.csproj
+++ b/src/Astor.Background.Management.Tests/Astor.Background.Management.Tests.csproj
@@ -2,7 +2,10 @@
 
     <PropertyGroup>
         <TargetFramework>net5.0</TargetFramework>
+        
         <IsPackable>false</IsPackable>
+        
+        <RootNamespace>Astor.Background.Management.Scraper.Tests</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
@@ -13,8 +16,9 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Astor.Background\Astor.Background.csproj" />
-      <ProjectReference Include="..\Example.Service\Example.Service.csproj" />
+        <ProjectReference Include="..\Astor.Background.Management.AspNetCoreUtils\Astor.Background.Management.AspNetCoreUtils.csproj" />
+        <ProjectReference Include="..\Astor.Background\Astor.Background.csproj" />
+        <ProjectReference Include="..\Example.Service\Example.Service.csproj" />
     </ItemGroup>
 
 </Project>
