--- a/src/Example.DebugWebApi/Example.DebugWebApi.csproj
+++ b/src/Example.DebugWebApi/Example.DebugWebApi.csproj
@@ -5,15 +5,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Astor.Background" Version="1.0.0" />
-        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.0" NoWarn="NU1605" />
-        <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="5.0.0" NoWarn="NU1605" />
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.5" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Astor.Background.Management.AspNetCoreUtils\Astor.Background.Management.AspNetCoreUtils.csproj" />
-      <ProjectReference Include="..\Astor.Background\Astor.Background.csproj" />
       <ProjectReference Include="..\Example.Service\Example.Service.csproj" />
     </ItemGroup>
 
