folders and sln restructured

--- a/test/Astor.Background.Tests/Astor.Background.Tests.csproj
+++ b/test/Astor.Background.Tests/Astor.Background.Tests.csproj
@@ -20,7 +20,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Astor.Background\Astor.Background.csproj" />
+      <ProjectReference Include="..\..\src\Astor.Background\Astor.Background.csproj" />
       <ProjectReference Include="..\Astor.Tests\Astor.Tests.csproj" />
       <ProjectReference Include="..\Example.Service\Example.Service.csproj" />
     </ItemGroup>
