--- a/test/Example.Service/Example.Service.csproj
+++ b/test/Example.Service/Example.Service.csproj
@@ -28,7 +28,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Astor.Background\Astor.Background.csproj" />
+      <ProjectReference Include="..\..\src\Astor.Background\Astor.Background.csproj" />
       <ProjectReference Include="..\Astor.Tests\Astor.Tests.csproj" />
     </ItemGroup>
 
