--- a/ElasticLogs/Astor.Background.ElasticLogs.Tests/Astor.Background.ElasticLogs.Tests.csproj
+++ b/ElasticLogs/Astor.Background.ElasticLogs.Tests/Astor.Background.ElasticLogs.Tests.csproj
@@ -7,10 +7,17 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Astor.JsonHttp" Version="2.1.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="5.0.6" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.1" />
         <PackageReference Include="MSTest.TestAdapter" Version="2.1.1" />
         <PackageReference Include="MSTest.TestFramework" Version="2.1.1" />
         <PackageReference Include="coverlet.collector" Version="1.3.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Astor.Background.ElasticLogs.DebugWebApi\Astor.Background.ElasticLogs.DebugWebApi.csproj" />
+      <ProjectReference Include="..\Astor.Background.ElasticLogs.Service\Astor.Background.ElasticLogs.Service.csproj" />
     </ItemGroup>
 
 </Project>
