Elastic logs service done

--- a/ElasticLogs/Astor.Background.ElasticLogs.Service/appsettings.json
+++ b/ElasticLogs/Astor.Background.ElasticLogs.Service/appsettings.json
@@ -6,6 +6,7 @@
             "Microsoft.Hosting.Lifetime": "Information"
         }
     },
+    "Elastic": "http://localhost:9200",
     "ConnectionStrings": {
         "RabbitMq" : "amqp://localhost:5672"
     }
