--- a/ElasticLogs/Astor.Background.ElasticLogs.Service/Astor.Background.ElasticLogs.Service.csproj
+++ b/ElasticLogs/Astor.Background.ElasticLogs.Service/Astor.Background.ElasticLogs.Service.csproj
@@ -6,17 +6,17 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Astor.Background" Version="2.1.0" />
+        <PackageReference Include="Astor.Background" Version="2.1.1" />
+        <PackageReference Include="Astor.JsonHttp" Version="2.1.0" />
         <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Http" Version="5.0.0" />
         <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="5.0.0" />
         <PackageReference Include="NEST" Version="7.12.1" />
+        <PackageReference Include="NEST.JsonNetSerializer" Version="7.12.1" />
     </ItemGroup>
 
     <ItemGroup>
-      <Content Include="appsettings.Development.json">
-        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-      </Content>
       <None Remove="appsettings.json" />
       <Content Include="appsettings.json">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
