--- a/ElasticLogs/Astor.Background.ElasticLogs.Service/Properties/launchSettings.json
+++ b/ElasticLogs/Astor.Background.ElasticLogs.Service/Properties/launchSettings.json
@@ -1,9 +1,9 @@
 ﻿{
   "$schema": "http://json.schemastore.org/launchsettings.json",
   "profiles": {
-    "Development": {
+    "Local": {
       "commandName": "Project",
-      "commandLineArgs": "--environment=Development"
+      "commandLineArgs": "--ConnectionStrings:RabbitMq=amqp://localhost:5672 --Elastic=http://localhost:9200 --Kibana=http://localhost:5601 --InternalExchangesPrefix=elastic-logs"
     }
   }
 }
