--- a/ElasticLogs/Astor.Background.ElasticLogs.Tests/Astor.Background.ElasticLogs.Tests.csproj
+++ b/ElasticLogs/Astor.Background.ElasticLogs.Tests/Astor.Background.ElasticLogs.Tests.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
         <PackageReference Include="Astor.JsonHttp" Version="2.1.0" />
+        <PackageReference Include="Astor.Linq" Version="1.1.0" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="5.0.6" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.1" />
         <PackageReference Include="MSTest.TestAdapter" Version="2.1.1" />
