--- a/ElasticLogs/Astor.Background.ElasticLogs.Service/Properties/launchSettings.json
+++ b/ElasticLogs/Astor.Background.ElasticLogs.Service/Properties/launchSettings.json
@@ -3,7 +3,7 @@
   "profiles": {
     "Local": {
       "commandName": "Project",
-      "commandLineArgs": "--ConnectionStrings:RabbitMq=amqp://localhost:5672 --Elastic=http://localhost:9200 --Kibana=http://localhost:5601 --InternalExchangesPrefix=elastic-logs"
+      "commandLineArgs": "--ConnectionStrings:RabbitMq=amqp://localhost:5672 --Elastic=http://localhost:9200 --Kibana=http://localhost:5601"
     }
   }
 }
