--- a/src/Astor.Background/Astor.Background.csproj
+++ b/src/Astor.Background/Astor.Background.csproj
@@ -10,6 +10,8 @@
     <ItemGroup>
       <PackageReference Include="Astor.GreenPipes" Version="1.0.0" />
       <PackageReference Include="Astor.RabbitMq" Version="1.1.0" />
+      <PackageReference Include="Astor.Timers" Version="1.0.0" />
+      <PackageReference Include="FluentScheduler" Version="5.5.1" />
       <PackageReference Include="GreenPipes" Version="4.0.0" />
       <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.1" />
       <PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="6.0.0" />
@@ -23,10 +25,6 @@
       <PackageReference Include="NSwag.Generation" Version="13.10.9" />
       <PackageReference Include="RabbitMQ.Client" Version="6.2.1" />
       <PackageReference Include="Telegram.Bot" Version="15.7.1" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <ProjectReference Include="..\Astor.Timers\Astor.Timers.csproj" />
     </ItemGroup>
 
 </Project>
