--- a/src/Astor.Background/Astor.Background.csproj
+++ b/src/Astor.Background/Astor.Background.csproj
@@ -24,6 +24,7 @@
       <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
       <PackageReference Include="NSwag.Generation" Version="13.10.9" />
       <PackageReference Include="RabbitMQ.Client" Version="6.2.1" />
+      <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.2.3" />
       <PackageReference Include="Telegram.Bot" Version="15.7.1" />
     </ItemGroup>
 
